correctly display files refused by plupload
file can be refused if they have a bad extension, or are too big
and cannot be resized (gifs & svgs)

--- a/web/static/sass/_plupload.scss
+++ b/web/static/sass/_plupload.scss
@@ -113,6 +113,7 @@ $image-title-size: 40px;
     display: inline-block;
     width: 100%;
     line-height: normal;
+    vertical-align: middle;
   }
 
   .plupload-close {
